...
        return "$make $model"
    }

    companion object {
        val sample = Car(make = "Toyota", model = "C-HR", engineSize = "1.8L", fuel = "diesel", year = 2022,
            mileage = 743, auctionDateTime = "2024/04/15 09:00:00", startingBid =  17000, favourite = true, details = CarDetail.sample)
        val sample2 = Car(make = "Ford", model = "Fiesta", engineSize = "1.8L", fuel = "diesel", year = 2022,
            mileage = 9084, auctionDateTime = "2024/04/15 09:00:00", startingBid =  15000, favourite = false, details = CarDetail.sample)
        val sample3 = Car(make = "Mercedes-Benz xpto screen breaker", model = "A-Class Saloon", engineSize = "1.6L", fuel = "petrol", year = 2023,
            mileage = 16245, auctionDateTime = "2024/04/15 09:00:00", startingBid =  140000, favourite = true, details = CarDetail.sample)
    }
}

...
