...
    sheetState: SheetState,
    toggleModalBottomSheetState: () -> DisposableHandle,
    setValue: (String) -> Unit,
    items: List<String>
) {
    ModalBottomSheet(
        modifier = Modifier.testTag("modal"),
        onDismissRequest = { toggleModalBottomSheetState() },
        sheetState = sheetState
    ) {
        // Sheet content
        LazyColumn {
            items(items.size) {
...
